--- a/pypackage.toml
+++ b/pypackage.toml
@@ -13,6 +13,12 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
+dependencies = [
+    "requests>=2.31.0",
+    "pydantic",
+    "typing",
+    "json"
+]
 
 [project.urls]
 Homepage = "https://github.com/ryentes/pytac"
